# OpenMP-Space-simulator

./: .gitignore  CMakeLists.txt  GifBuilder.cpp  GifBuilder.h  MassPoint.cpp  MassPoint.h  README.md  SpaceSimulator.cpp  SpaceSimulator.h  generator.cpp  gif.cpp  gif.h  main.cpp  run_simulator.sh  settings.h
data/: in_100.txt  in_1000.txt  in_10000.txt  in_1600.txt  in_200.txt  in_3200.txt  in_400.txt  in_800.txt  out.txt
docs/: benchmark.xlsx  callgrind.out.2391
